# drake

./: CHANGELOG.md  CMakeLists.txt  WORKSPACE
automotive/: light_bulb.cc  light_bulb.h
automotive/maliput/api/: BUILD.bazel  intersection.cc  intersection.h  intersection_book.h  road_network.cc
automotive/maliput/api/rules/: traffic_lights.cc  traffic_lights.h
automotive/maliput/api/test/: mock.cc  traffic_lights_test.cc
automotive/maliput/api/test_utilities/: rules_test_utilities.h
automotive/maliput/base/: BUILD.bazel  intersection_book.cc  intersection_book.h  intersection_loader.cc  intersection_loader.h  intersections_loader.cc  intersections_loader.h  phase_ring_book_loader.cc  roadbook.h
automotive/maliput/base/test/: intersection_book_test.cc  intersections_loader_test.cc  two_lane_x_intersection_rules.yaml
automotive/maliput/doc/: maliput-design.org
automotive/maliput/multilane/: 2x2_intersection.yaml
automotive/maliput/simple_phase_book/: simple_right_of_way_phase_book.cc  simple_right_of_way_phase_book.h
automotive/maliput/simple_phase_book/test/: simple_right_of_way_phase_book_test.cc
automotive/maliput/utility/: BUILD.bazel  derive_lane_s_route.cc  derive_lane_s_route.h  yaml_to_obj.cc
automotive/maliput/utility/test/: derive_lane_s_route_test.cc  generate_string_test.cc
cmake/: ros_packages.cmake
common/: drake_optional.h
common/test/: drake_optional_test.cc
drake/: CMakeLists.txt
drake/automotive/: BUILD  CMakeLists.txt  automotive_demo.cc  automotive_simulator.cc  automotive_simulator.h  car_sim_lcm.cc  car_sim_lcm_common.cc  idm_controller.cc  maliput_railcar.cc  maliput_railcar.h  mobil_planner.cc  mobil_planner.h  monolane_onramp_merge.cc  pose_selector.cc  pose_selector.h  pure_pursuit.cc  pure_pursuit.h  pure_pursuit_controller.cc
drake/automotive/maliput/api/: BUILD  CMakeLists.txt  lane.h  lane_data.h  to_string_stream.h
drake/automotive/maliput/dragway/: junction.cc  segment.cc
drake/automotive/maliput/dragway/test/: dragway_test.cc
drake/automotive/maliput/monolane/: arc_lane.cc  line_lane.cc  road_geometry.cc
drake/automotive/maliput/rndf/: builder.cc  builder.h
drake/automotive/maliput/utility/: generate_obj.cc
drake/automotive/test/: automotive_simulator_test.cc  maliput_railcar_test.cc  monolane_onramp_merge_test.cc  pose_selector_test.cc  pure_pursuit_test.cc
drake/common/: CMakeLists.txt
drake/doc/: from_source_ros.rst  from_source_ros_indigo.rst  from_source_ros_kinetic.rst
drake/examples/Cars/: CMakeLists.txt  README.md  README_Drake_ROS_Car_Sim.md  car_sim_lcm_and_ros.cc  car_simulation.cc  car_simulation.h  demo_multi_car.cc  multi_car_sim.cpp  simulateLCM.cpp
drake/examples/Cars/models/prius/: prius.sdf  (+2 more)
drake/examples/Cars/prius/: prius.sdf
drake/examples/Cars/test/: CMakeLists.txt
drake/examples/Quadrotor/: runDynamics.cpp
drake/examples/kuka_iiwa_arm/: kuka_plan_runner.cc  polynomial_trajectory_fit_generator.h  run_kuka_iiwa_arm_dynamics.cc
drake/lcmtypes/: CMakeLists.txt  lcmt_diagnostic_msgs_diagnostic_status.lcm  lcmt_diagnostic_msgs_key_value.lcm  lcmt_std_msgs_header.lcm  lcmt_std_msgs_time.lcm
drake/multibody/: RigidBodyTree.cpp  RigidBodyTree.h  rigid_body_tree.cc  rigid_body_tree.h
drake/multibody/models/: box.urdf
drake/multibody/models/box_pinned_to_world/: box_pinned_to_world.sdf  model.config
drake/multibody/rigid_body_plant/: rigid_body_plant.h
drake/parsers/: CMakeLists.txt  model.cc  model.h  model_elements.cc  model_elements.h
drake/parsers/test/: CMakeLists.txt  model_test.cc  parser_model_test.cc
drake/ros/: CMakeLists.txt  ros_sensor_publisher_joint_state.h  ros_sensor_publisher_odometry.h  ros_tf_publisher.h
drake/ros/scripts/: install_drake_ros_package.sh
drake/ros/test/: CMakeLists.txt
drake/solvers/: Constraint.m  FunctionHandleConstraint.m
drake/systems/: bot_visualizer_system.cc  bot_visualizer_system.h
drake/systems/controllers/: gravity_compensator.cc
drake/systems/framework/: BUILD  CMakeLists.txt  context.h  diagram_context.h  leaf_context.h  value.cc  value.h
drake/systems/framework/primitives/: CMakeLists.txt  affine_system-inl.h  affine_system.cc  affine_system.h
drake/systems/framework/test/: diagram_context_test.cc  leaf_context_test.cc  output_port_test.cc
drake/systems/lcm/: CMakeLists.txt  lcm_subscriber_system.cc  lcm_subscriber_system.h  lcm_to_basic_vector_translator.h  lcm_to_vector_interface_translator.h  serializer.h  translator_lcmt_drake_signal.h  translator_to_lcmt_drake_signal.cc  translator_to_lcmt_drake_signal.h
drake/systems/lcm/test/: lcm_subscriber_system_test.cc
drake/systems/plants/: RigidBody.cpp  RigidBody.h  RigidBodyFrame.h  RigidBodySystem.cpp  RigidBodySystem.h  RigidBodyTree.cpp  RigidBodyTree.h  RigidBodyTreeSDF.cpp  RigidBodyTreeURDF.cpp  parser_sdf.cc  parser_sdf.h  parser_urdf.cc  rigidBodyLCMNode.cpp
drake/systems/plants/collision/test/: CMakeLists.txt
drake/systems/plants/test/: addRobotFromURDFStringTest.m  compareRigidBodySystems.cpp
drake/systems/primitives/: BUILD  CMakeLists.txt  performance_monitor.cc  performance_monitor.h
drake/systems/rendering/: frame_velocity.h  pose_bundle.h
drake/systems/sensors/: BUILD  accelerometer.cc  accelerometer.h  accelerometer_output.cc  accelerometer_output.h  depth_sensor.cc  depth_sensor.h  depth_sensor_output.h  global_collision_sensor.cc  global_collision_sensor.h  magnetometer.h  rgbd_camera.cc
drake/systems/sensors/test/: CMakeLists.txt  accelerometer_test.cc  global_collision_sensor_test.cc  rgbd_camera_test.cc
drake/systems/sensors/test/models/: all_shapes.sdf
ros/drake_cars_examples/src/: car_sim_lcm_and_ros.cc  single_car_in_stata_garage.cc
ros/drake_ros_common/: CMakeLists.txt
ros/drake_ros_common/test/: README.md  parameter_server_test.cc  parameter_server_test.test
ros/drake_ros_common_test/: CMakeLists.txt  README.md  package.xml
(+3 files in other folders)
