<package format="2">

  <name>drake_ros_common_test</name>

  <version>0.0.0</version>

  <description>
    A package for testing the code in package drake_ros_common.
  </description>

  <license>BSD</license>

  <author>Chien-Liang Fok</author>

  <maintainer email="drake-users@mit.edu">Drake Users</maintainer>

  <url type="website">http://drake.mit.edu</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>drake_ros_common</build_depend>
</package>
